张礼雄 update 34